GNOME Bugzilla – Bug 723127
hlsdemux: Seeks sometimes deadlock
Last modified: 2014-02-04 16:26:17 UTC
Created attachment 267353 [details] Log showing deadlock on cancel Occasionally, a seek using the hlsdemux will deadlock, resulting in gst_element_seek_simple() blocking. This happens because gst_uri_downloader_fetch_uri_with_range() doesn't release the object lock if downloader->priv->urisrc is not set. See the attachment 'cancel_deadlock' for a log showing the problem.
Created attachment 267354 [details] [review] Fix for the problem; release the object lock if downloader->priv->urisrc is not set.
commit 06fec6709d7810c7dd377efc0820cde28e96a864 Author: Duncan Palmer <dpalmer@digisoft.tv> Date: Wed Jan 29 20:38:57 2014 +0100 uridownloader: Always release the object lock in gst_uri_downloader_fetch_uri_with_range( even if downloader->priv->urisrc is not set. This avoids deadlock under some some conditions on cancel. https://bugzilla.gnome.org/show_bug.cgi?id=723127