uridownloader: Always release the object lock in gst_uri_downloader_fetch_uri_with_range()

even if downloader->priv->urisrc is not set. This avoids deadlock under some
some conditions on cancel.

https://bugzilla.gnome.org/show_bug.cgi?id=723127